; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/libfat/extr_partition.c__FAT_partition_constructor.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/libfat/extr_partition.c__FAT_partition_constructor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_SECTOR_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @_FAT_partition_constructor(i32* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32* null, i32** %10, align 8
  %12 = load i32, i32* @MAX_SECTOR_SIZE, align 4
  %13 = call i64 @_FAT_mem_align(i32 %12)
  %14 = inttoptr i64 %13 to i32*
  store i32* %14, i32** %11, align 8
  %15 = load i32*, i32** %11, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %18, label %17

17:                                               ; preds = %4
  store i32* null, i32** %5, align 8
  br label %28

18:                                               ; preds = %4
  %19 = load i32*, i32** %6, align 8
  %20 = load i32, i32* %7, align 4
  %21 = load i32, i32* %8, align 4
  %22 = load i32, i32* %9, align 4
  %23 = load i32*, i32** %11, align 8
  %24 = call i32* @_FAT_partition_constructor_buf(i32* %19, i32 %20, i32 %21, i32 %22, i32* %23)
  store i32* %24, i32** %10, align 8
  %25 = load i32*, i32** %11, align 8
  %26 = call i32 @_FAT_mem_free(i32* %25)
  %27 = load i32*, i32** %10, align 8
  store i32* %27, i32** %5, align 8
  br label %28

28:                                               ; preds = %18, %17
  %29 = load i32*, i32** %5, align 8
  ret i32* %29
}

declare dso_local i64 @_FAT_mem_align(i32) #1

declare dso_local i32* @_FAT_partition_constructor_buf(i32*, i32, i32, i32, i32*) #1

declare dso_local i32 @_FAT_mem_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
